scripts/salesforce/force-app/main/default/objects/Case/fields/PlaywrightReproLink__c.field-meta.xml
<CustomField>
    <fullName>PlaywrightReproLink__c</fullName>
    <label>Playwright Repro Link</label>
    <description>Internal-only pointer to the generated repro; never a public URL.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>