scripts/salesforce/force-app/main/default/objects/Case/fields/PrivacyStatus__c.field-meta.xml
<CustomField>
    <fullName>PrivacyStatus__c</fullName>
    <label>Privacy Status</label>
    <description>Privacy posture of the trace, e.g. "Scrubbed / No NPI".</description>
    <type>Text</type>
    <length>40</length>
</CustomField>