scripts/salesforce/force-app/main/default/objects/Case/fields/ReplayabilityGrade__c.field-meta.xml
<CustomField>
    <fullName>ReplayabilityGrade__c</fullName>
    <label>Replayability Grade</label>
    <description>Letter grade (A-F) derived from the replayability score.</description>
    <type>Text</type>
    <length>1</length>
</CustomField>