scripts/salesforce/force-app/main/default/objects/Case/fields/ReplayabilityScore__c.field-meta.xml
<CustomField>
    <fullName>ReplayabilityScore__c</fullName>
    <label>Replayability Score</label>
    <description>Deterministic 0.00-1.00 reproducibility score from StepStitch.</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>2</scale>
</CustomField>