scripts/salesforce/force-app/main/default/objects/Case/fields/RouteTemplate__c.field-meta.xml
<CustomField>
    <fullName>RouteTemplate__c</fullName>
    <label>Route Template</label>
    <description>Templated route of the failing step, e.g. /accounts/:id (no real ids).</description>
    <type>Text</type>
    <length>255</length>
</CustomField>