scripts/salesforce/force-app/main/default/objects/Case/fields/StepStitchTraceId__c.field-meta.xml
<CustomField>
    <fullName>StepStitchTraceId__c</fullName>
    <label>StepStitch Trace Id</label>
    <description>Opaque StepStitch trace id (no NPI). Set from the StepStitch draft.</description>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
</CustomField>